infra/messenger-whatsapp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.31.2 (a92241f79)
  creationTimestamp: null
  labels:
    io.kompose.service: messenger-whatsapp
  name: messenger-whatsapp
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: messenger-whatsapp
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.version: 1.31.2 (a92241f79)
      creationTimestamp: null
      labels:
        io.kompose.network/infra-default: "true"
        io.kompose.service: messenger-whatsapp
    spec:
      containers:
        - env:
            - name: GRAPH_API_TOKEN
              valueFrom:
                secretKeyRef:
                  name: app-secrets
                  key: GRAPH_API_TOKEN
            - name: GRAPH_NUMBER_ID
              valueFrom:
                configMapKeyRef:
                  name: app-config
                  key: GRAPH_NUMBER_ID
            - name: PORT
              value: "3000"
            - name: RABBITMQ_URL
              value: amqp://guest:guest@rabbitmq:5672
            - name: WEBHOOK_VERIFY_TOKEN
              valueFrom:
                configMapKeyRef:
                  name: app-config
                  key: WEBHOOK_VERIFY_TOKEN
          image: muriloeduardo/messenger-whatsapp
          imagePullPolicy: Always
          name: messenger-whatsapp
          ports:
            - containerPort: 3000
              protocol: TCP
          resources: {}
      restartPolicy: Always
status: {}
