infra/messenger-whatsapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.version: 1.31.2 (a92241f79)
  creationTimestamp: null
  labels:
    io.kompose.service: messenger-whatsapp
  name: messenger-whatsapp
spec:
  ports:
    - name: "3000"
      port: 3000
      targetPort: 3000
  selector:
    io.kompose.service: messenger-whatsapp
status:
  loadBalancer: {}
